--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,11 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-image: url('your-background-image.jpg'); /* Replace with your actual background image path */
+    background-image: url('https://i.postimg.cc/nhSZ3mg5/Capture.png'); /* Replace with your actual background image path */
     background-size: cover;
     background-position: center;
     height: 100vh;
-    display: flex;
+
     align-items: center;
     justify-content: center;
 }
@@ -21,6 +21,7 @@ body {
 
 h1 {
     color: #d8c8b1;
+    text-align: center;
 }
 
 form {
@@ -65,4 +66,19 @@ button:hover {
     .container {
         width: 80%;
     }
+}
+
+.blur-background {
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.37);
+}
+
+.center-block {
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    margin-top: 40vh;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width :50%
 }
