--- a/css/user.css
+++ b/css/user.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('../binary-code-background-vector-36324133.jpg');
+    background-color: #1e2329;
     background-size: contain;
     background-position: center;
     color: wheat;
