--- a/css/user.css
+++ b/css/user.css
@@ -61,7 +61,7 @@ body {
     font-weight: bold;
     font-size: 1.2em;
     margin-top: 15vh;
-    display: inline;
+    display: inline-block;
 }
 .Update_Word {
     margin-right: 10px;
@@ -73,6 +73,7 @@ body {
 .Balance #TotalWorth {
     color: white;
     font-size: 2em !important;
+    display: inline-block;
 }
 
 .sidepanel{
