height problem in mobile view solved

--- a/css/user.css
+++ b/css/user.css
@@ -28,7 +28,7 @@ body {
         padding-bottom: 5vh;
     }
     .Master_Table{
-        margin-top: 0vh;
+        margin-top: 10vh !important;
     }
     }
 
