--- a/css/user.css
+++ b/css/user.css
@@ -81,7 +81,7 @@ body {
 }
 .sidepanel{
     width: 40%;
-    height:100vh;
+    height:100%;
     background-color: #1e2329;
     border-right: 2px solid black;
     flex: 0 0 auto;
