added few changes to height query

--- a/css/user.css
+++ b/css/user.css
@@ -19,6 +19,33 @@ body {
         border-bottom: 2px solid black ;
         margin-top: -10vh;
         padding-top: 5vh;
+        height:auto !important;
+    }
+    body {
+        display: block;
+        margin: 0 !important;
+    }
+    .user_panel{
+        padding-bottom: 5vh;
+        margin-left: 0 !important;
+
+    }
+    .Master_Table{
+        margin-top: 10vh !important;
+    }
+
+    }
+@media (max-height: 500px){
+    .sidepanel{
+        border-bottom: none !important;
+    }
+    .sidepanel{
+        width: 100% !important;
+        border-right:none !important;
+        padding-bottom: 2vh;
+        border-bottom: 2px solid black ;
+        margin-top: -10vh;
+        padding-top: 5vh;
         position: static !important;
     }
     body {
@@ -33,13 +60,8 @@ body {
     .Master_Table{
         margin-top: 10vh !important;
     }
+    }
 
-    }
-@media (max-height: 500px){
-    .sidepanel{
-        border-bottom: none !important;
-    }
-    }
 
 #stick-layer {
     position: fixed;
@@ -79,7 +101,6 @@ body {
 
 .user_panel {
     flex-grow: 1;
-    margin-left:40%;
 }
 .Balance #TotalWorth {
     color: white;   
@@ -95,7 +116,6 @@ body {
     background-color: #1e2329;
     border-right: 2px solid black;
     flex: 0 0 auto;
-    position: fixed;
     top: 0;
     left: 0;
 }
